--- a/Week 2/w2-assignment4.ipynb
+++ b/Week 2/w2-assignment4.ipynb
@@ -457,9 +457,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.17 ms ± 35.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "#Function from problem 6\n",
