--- a/Week 2/w2-assignment6.ipynb
+++ b/Week 2/w2-assignment6.ipynb
@@ -12,7 +12,7 @@
     "If $A$ is an $m \\times n$ matrix and $B$ is an $n \\times p$ matrix,\n",
     "$$\\displaystyle \\mathbf {A} ={\\begin{pmatrix}a_{11}&a_{12}&\\cdots &a_{1n}\\\\a_{21}&a_{22}&\\cdots &a_{2n}\\\\\\vdots &\\vdots &\\ddots &\\vdots \\\\a_{m1}&a_{m2}&\\cdots &a_{mn}\\\\\\end{pmatrix}},\\quad \\mathbf {B} ={\\begin{pmatrix}b_{11}&b_{12}&\\cdots &b_{1p}\\\\b_{21}&b_{22}&\\cdots &b_{2p}\\\\\\vdots &\\vdots &\\ddots &\\vdots \\\\b_{n1}&b_{n2}&\\cdots &b_{np}\\\\\\end{pmatrix}}$$\n",
     "\n",
-    "the matrix product $C = AB$ (denoted without multiplication signs or dots) is defined to be the $m \\times p$ matrix\n",
+    "the matrix product $C = AB$ is defined to be the $m \\times p$ matrix\n",
     "$$\\displaystyle \\mathbf {C} ={\\begin{pmatrix}c_{11}&c_{12}&\\cdots &c_{1p}\\\\c_{21}&c_{22}&\\cdots &c_{2p}\\\\\\vdots &\\vdots &\\ddots &\\vdots \\\\c_{m1}&c_{m2}&\\cdots &c_{mp}\\\\\\end{pmatrix}}$$\n",
     "\n",
     "such that\n",
