--- a/Sprint 10/sprint10.ipynb
+++ b/Sprint 10/sprint10.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "ae779950",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "a23ca86a",
    "metadata": {},
    "outputs": [],
@@ -561,14 +561,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "bd2775fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(48000, 784)\n",
+      "(48000,)\n",
+      "(12000, 784)\n",
+      "(12000,)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2)"
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2)\n",
+    "print(X_train.shape)\n",
+    "print(y_train.shape)\n",
+    "print(X_val.shape)\n",
+    "print(y_val.shape)"
    ]
   },
   {
