--- a/Sprint 24/sprint24.ipynb
+++ b/Sprint 24/sprint24.ipynb
@@ -700,18 +700,51 @@
    "id": "1d20ec52",
    "metadata": {},
    "source": [
-    "Code reading:\n",
+    "**Code reading:**\n",
     "\n",
     "- Lines 51-55: Import library\n",
     "- Lines 57-62: Hyperparameter Settings\n",
-    "- Lines 65-82: Get input text and output text from the file and tokenization (in character level)\n",
-    "- "
+    "- Lines 65-96: Get input text and output text from the file and tokenization (in character level). In target text, add `\\t` as SOS token and `\\n` as EOS token. Define existing tokens in input (encoder) and output (decoder) text. Print out some statistics.\n",
+    "- Line 97-100: Indexing the tokens.\n",
+    "- Line 101-122: Transforming the text into one-hot vectors.\n",
+    "- Line 123-144: Define the model that will turn `encoder_input_data` & `decoder_input_data` into `decoder_target_data`.\n",
+    "- Line 145-153: Compile, fit and save the aforementioned model.\n",
+    "- Line 162-174: Define a sampling model.\n",
+    "- Line 176-181: Reverse-lookup token index to decode sequences back to something readable.\n",
+    "- Line 184-219: `decode_sequence` decodes a given input sentence into corresponding output sentence in another language.\n",
+    "- Line 222-229: Showing result using `decode_sequence`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b440e6d0",
+   "metadata": {},
+   "source": [
+    "### [Problem 2] Execution of a trained model of image captioning\n",
+    "\n",
+    "This task is done on [sprint_24_demo_image_captioning.ipynb](./sprint24_demo_image_captioning.ipynb)\n",
+    "\n",
+    "### [Problem 3] Investigate what to do if you want to move with Keras\n",
+    "\n",
+    "I have found 2 ways to move from Keras:\n",
+    "1. Using `pytorch2keras`(https://github.com/gmalivenko/pytorch2keras)\n",
+    "    - Install the packages: `pip install pytorch2keras`\n",
+    "    - Convert PyTorch model to Keras by using `pytorch_to_keras()` with PyTorch `model` as input\n",
+    "    - We can save the output model as .h5 file and then convert it with tensorflowjs_converter.\n",
+    "    - When the output layer is given, convert my_model.pb to tfjs model\n",
+    "    - Use the model in Keras.\n",
+    "2. Save PyTorch model in .onnx file, then load the file using `onnx`\n",
+    "    - Install the packages: `pip install onnx`, `git clone https://github.com/onnx/onnx-tensorflow.git && cd onnx-tensorflow && pip install -e`\n",
+    "    - Export PyTorch model to .onnx file. For example: \n",
+    "    `torch.onnx.export(model, dummy_input, \"resnet50.onnx\", verbose=False, input_names=input_names, output_names=output_names, export_params=True)`\n",
+    "    - Load .onnx file and import to Keras:  `model = onnx.load('mnist.onnx')`, `tf_rep = onnx_tf.backend.prepare(model)`\n",
+    "    - We can have the model in the format that is suitable for Keras."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa65c958",
+   "id": "97ecb9c1",
    "metadata": {},
    "outputs": [],
    "source": []
