--- a/Sprint 24/sprint24.ipynb
+++ b/Sprint 24/sprint24.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b440e6d0",
+   "id": "c5a27666",
    "metadata": {},
    "source": [
     "### [Problem 2] Execution of a trained model of image captioning\n",
@@ -738,16 +738,8 @@
     "    - Export PyTorch model to .onnx file. For example: \n",
     "    `torch.onnx.export(model, dummy_input, \"resnet50.onnx\", verbose=False, input_names=input_names, output_names=output_names, export_params=True)`\n",
     "    - Load .onnx file and import to Keras:  `model = onnx.load('mnist.onnx')`, `tf_rep = onnx_tf.backend.prepare(model)`\n",
-    "    - We can have the model in the format that is suitable for Keras."
+    "    - We can have the model in the other format that is suitable for Keras."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97ecb9c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
