--- a/Sprint 26/ml_based.ipynb
+++ b/Sprint 26/ml_based.ipynb
@@ -5,7 +5,7 @@
    "id": "08ab8a31",
    "metadata": {},
    "source": [
-    "# Machine Learning-based for Vietnamese Topic Modeling\n",
+    "# Machine Learning-based for Vietnamese Text Classification\n",
     "\n",
     "## TF-IDF (Term Frequency - Inverse Document Frequency) + SVM (Support Vector Machine)"
    ]
